# Crop-Yield-Prediction

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.py
demo/: app.py
scripts/: train.py
src/: __init__.py
src/data/: generator.py
src/eval/: metrics.py
src/features/: engineering.py
src/viz/: plots.py
tests/: test_crop_yield.py
